# Graintrack_ddd

./: .gitignore  Makefile  Readme.md  pyproject.toml  shell.md  tech_task.md
app/: containers.py  main.py
app/application/api/products/: products.py
app/application/interfaces/: category_repository_interface.py  product_repository_interface.py  reservation_repository_interface.py  sale_repository_interface.py
app/application/utils/: id_converter.py
app/domain/entities/: base_entity.py  category.py  product.py  reservation.py  sale.py
app/domain/exceptions/: base_exception.py  category_exceptions.py  product_exceptions.py  reservation_exceptions.py  sale_exceptions.py
app/domain/services/: category_service.py  product_service.py  reservation_service.py  sale_service.py
app/domain/values/: __init__.py  base_value_object.py  discount.py  price.py  quantity.py
app/infrastructure/converters/: category_converters.py  product_converters.py  reservation_converters.py  sale_converters.py
app/infrastructure/repositories/in_memory/: in_memory_category_repository.py  in_memory_product_repository.py  in_memory_reservation_repository.py  in_memory_sale_repository.py
app/infrastructure/repositories/sql/: sql_product_repository.py
app/presentation/api/v1/: dependencies.py
app/presentation/schemas/: category_schema.py  product_schema.py  reservation_schema.py  sale_schema.py
app/tests/: conftest.py  pytest.ini  test_container.py
app/tests/domain/services/: test_category_service.py  test_product_service.py  test_reservation_service.py  (+1 more)
docker_compose/: app.yaml
(+8 files in other folders)
