[tool.poetry]
name = "graintrack-ddd-test"
version = "0.1.0"
description = ""
authors = ["n-varvonets <nickolay.varvonets@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["all"], version = "^0.32.0"}
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ipython = "^8.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
